2011-08-20   D. V. Wiebe <getdata@ketiltrout.net> svn:597
	* src/internal.h: Added bname to fragment struct holding the basename of the
	file.
	* src/open.c (gd_cbopen) src/include.c (_GD_Include): Initialise
	fragment->bname.
	* src/close.c (_GD_FreeD) src/include.c (gd_uninclude): Deallocate
	fragment->bname.

2011-08-19   D. V. Wiebe <getdata@ketiltrout.net> svn:596
	* src/open.c (gd_invalid_dirfile gd_cbopen): If allocating the DIRFILE
	itself fails, return NULL instead of segfaulting.

	* src/nmeta.c (gd_nmfields_by_type): Throw GD_E_BAD_ENTRY on encountering
	GD_NO_ENTRY.

	* src/index.c (gd_framenum_subset64): Throw GD_E_DIMENSION if the caller
	supplies the field code for a scalar.

	* src/errors.c: Added GD_E_BOUNDS and GD_E_LINE_TOO_LONG.

	* src/encoding.c (_GD_ResolveEncoding): Don't segfault on malloc error.

	* src/flimits.c (_GD_GetBOF): Throw GD_INTERNAL_ERROR instead of
	GD_E_BAD_FIELD_TYPE when encountering GD_NO_ENTRY.

	* src/parse.c (_GD_UTF8Encode): Renamed from utf8encode for consistency.

	* src/sie.c (_GD_SampIndTUnlink) src/include.c (gd_uninclude): Use
	gd_UnlinkAt instead of bare unlink().

	* man/make_html.pl: Handle multiparagraph .TPs.

2011-08-11   D. V. Wiebe <getdata@ketiltrout.net> svn:595
	* src/internal.h: In cases where no explicitly 64-bit stat struct can be
	found, don't bother trying to use explicitly 64-bit stat functions.

2011-08-11   D. V. Wiebe <getdata@ketiltrout.net> svn:594
	* test/sie_nframes_big.c test/sie_get_big.c test/sie_get_little.c
	test/sie_nframes_little.c test/sie_move_to.c test/sie_put_little.c
	test/sie_move_from.c test/sie_put_big.c: Added.

	* configure.ac src/internal.h: Handle missing fstat64, ftruncate64, and byte
	swapping routines.

	* src/internal.h src/errors.c: Differentiate GD_E_UNKNOWN_ENCODING errors
	arising from existing, unknown encodings on disk from errors arising from
	attempts to convert to an unknown encoding.

	* src/endian.c (_GD_FixEndianness): Use standard system byte-swapping